[package]
name = "pcap-converter"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.5.1", features = ["derive"] }
etherparse = "0.14.3"
pcap-parser = { version = "0.15.0", features = ["data"] }
chrono = "0.4.34"
domain = "0.9.3"
num-format = "0.4.4"
arrow = "50.0.0"
parquet = "50.0.0"
ntp-parser = "0.6.0"
rand = "0.8.5"
duckdb = { version = "0.10.1", features = ["bundled"] }
crossbeam = "0.8"
