[package]
name = "pcap-converter"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.5.1", features = ["derive"] }
etherparse = "0.14.3"
pcap-parser = { version = "0.15.0", features = ["data"] }
chrono = "0.4.34"
domain = "0.10"
num-format = "0.4.4"
arrow = "50.0.0"
parquet = "50.0.0"
ntp-parser = "0.6.0"
rand = "0.8.5"
duckdb = { version = "0.10", features = ["bundled"] }
#duckdb = "0.10"
crossbeam = "0.8"
env_logger = "0.11.3"
log = "0.4.21"
serde_json = "1.0"
